testing/tests/ui/error_file_path.stderr
error: failed to parse template source
 --> testing/templates/invalid_syntax.html:1:15
  |
       1 | {% let 12 = 0 }
         |               ^ close to this token
         |
 --> tests/ui/error_file_path.rs:4:3
  |
4 | #[template(path = "invalid_syntax.html")]
  |   ^^^^^^^^

error: failed to parse template source
 --> testing/templates/invalid_syntax.html:1:15
  |
       1 | {% let 12 = 0 }
         |               ^ close to this token
         |
 --> tests/ui/error_file_path.rs:8:3
  |
8 | #[template(path = "include_invalid_syntax.html")]
  |   ^^^^^^^^

error: failed to parse template source
 --> testing/templates/invalid_syntax.html:1:15
  |
       1 | {% let 12 = 0 }
         |               ^ close to this token
         |
  --> tests/ui/error_file_path.rs:12:3
   |
12 | #[template(source = r#"{% extends "include_invalid_syntax.html" %}"#, ext = "txt")]
   |   ^^^^^^^^
